Update pom.xml
- Allows reflection on core Java classes
- Fixes InaccessibleObjectException